update demo app w/ preact

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Inferno Starter</title>
+    <title>Preact Starter</title>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Inferno Starter">
+    <meta name="application-name" content="Preact Starter">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Inferno Starter">
+    <meta name="apple-mobile-web-app-title" content="Preact Starter">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.json">
