adjust webapp colors

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
 
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="msapplication-TileImage" content="/icon/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#FAFAFA">
+    <meta name="msapplication-TileColor" content="#F2F2F2">
 
-    <meta name="theme-color" content="#FAFAFA">
+    <meta name="theme-color" content="#673AB8">
   </head>
   <body>
     <div id="root">Loading</div>
